--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
                     <p>{{ site.footer.github }}</p>
                 </section>
                 <section>
-                    <h2>Sponsor</h2>
+
                     <div class="ad">
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <ins class="adsbygoogle"
@@ -108,7 +108,7 @@ layout: default
             <div>
                 <section>
                     <h2>Get in touch</h2>
-                    <form method="post" action="#">
+                    <form method="POST" action="https://script.google.com/macros/s/AKfycby79Ps-UgCWaoYWBzfhuroPY05CdBJ4TX6rXUYbVOYCOid1Qmd3P0gzTyZ-Np9HV4o/exec" class="gform">
                         <div class="field half first">
                             <input type="text" name="name" id="name" placeholder="Name"/>
                         </div>
@@ -122,9 +122,19 @@ layout: default
                             <li><input type="submit" value="Send" class="special"/></li>
                             <li><input type="reset" value="Reset"/></li>
                         </ul>
+
+                        <div style="display:none" class="thankyou_message">
+ <!-- You can customize the thankyou message by editing the code below -->
+ <h2><em>Thanks</em> for contacting us! We will get back to you soon!
+ </h2>
+</div>
                     </form>
                 </section>
+
+
             </div>
+
         </div>
+
     </footer>
 </div>
