--- a/index.html
+++ b/index.html
@@ -17,14 +17,24 @@ layout: default
 
     <!-- Main -->
 <div id="main" data-exif='{{ site.exif }}'>
-    {% assign randomized_images = site.static_files | where_exp: "image", "image.path contains 'fulls'" | sample: site.static_files.size %}
-    {% for image in randomized_images %}
-        <article class="thumb">
-            <a href="{{ site.baseurl }}{{ site.image_fulls_loc }}/{{ image.name }}" class="image">
-                <img src="{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}" alt="" data-name="{{ image.name }}" />
-            </a>
-        </article>
+    {% for image in site.static_files %}
+        {% if image.path contains 'fulls' %}
+            <article class="thumb">
+                <a href="{{ site.baseurl }}{{ site.image_fulls_loc }}/{{ image.name }}" class="image">
+                    <img src="{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}" alt="" data-name="{{ image.name }}" />
+                </a>
+            </article>
+        {% endif %}
     {% endfor %}
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var main = document.getElementById('main');
+            for (var i = main.children.length; i >= 0; i--) {
+                main.appendChild(main.children[Math.random() * i | 0]);
+            }
+        });
+    </script>
 </div>
 
 
